--- a/data/products.yml
+++ b/data/products.yml
@@ -1,6 +1,51 @@
 - id: 1
   name: Eiffel Purse
+  collection_id: 1
+  product_range_id: 3
+  description:
+  etsy_url: http://etsy.com/BrightonBelleGifts/item/1
+
 - id: 2
   name: Tweed Purse
+  collection_id: 2
+  product_range_id: 3
+
 - id: 3
-  name: Butterfy Purse
+  name: Butterfly Purse
+  collection_id: 3
+  product_range_id: 3
+
+- id: 4
+  name: Eiffel Bag
+  collection_id: 1
+  product_range_id: 2
+
+- id: 5
+  name: Tweed Bag
+  collection_id: 2
+  product_range_id: 2
+
+- id: 6
+  name: Butterfly Bag
+  collection_id: 3
+  product_range_id: 2
+
+- id: 7
+  name: Eiffel Cushion
+  collection_id: 1
+  product_range_id: 1
+
+- id: 8
+  name: Tweed Cushion
+  collection_id: 2
+  product_range_id: 1
+
+- id: 9
+  name: Butterfly Cushion
+  collection_id: 3
+  product_range_id: 1
+
+- id: 10
+  name: iPad Case
+  collection_id: 3
+  product_range_id: 4
