--- a/data/ranges.yml
+++ b/data/ranges.yml
@@ -1,8 +1,11 @@
 - id: 1
   name: Cushions
+  
 - id: 2
   name: Bags
+  
 - id: 3
   name: Purses
+  
 - id: 4
-  name: iPad Cases
+  name: Gadget Cases
