--- a/data/products.yml
+++ b/data/products.yml
@@ -213,3 +213,13 @@
   image1: 770x550.png
   image2: 770x550.png
   image3: 770x550.png
+  
+- id: 13
+  name: Beach Huts Tote Bag
+  collection_id: 4
+  product_range_id: 2
+  thumbnail: 160x200.png
+  image1: 770x550.png
+  image2: 770x550.png
+  image3: 770x550.png
+  
