--- a/data/products.yml
+++ b/data/products.yml
@@ -4,17 +4,13 @@
   product_range_id: 3
   thumbnail: eiffelbackgroundthumb.jpg
   description: 
-    Here is a fabulous purse for you to keep your belongings safe in real style! 
-   
-    This gorgeous coin purse has been handmade from wonderful quality quilting weight cotton. 
-   
-    The main fabric colour is a lovely vibrant turquoise, and the super chic Eiffel Tower design is a rich chocolate brown. 
+    Here is a fabulous purse for you to keep your belongings safe in real style! This gorgeous coin purse has been handmade from wonderful quality quilting weight cotton. 
 
-    The interior of the purse is fully lined with polyester. 
-    
-    It has also been interfaced and interlined to give it lots of volume as well as making it nice and sturdy.
- 
-    It is secured by an antique brass effect kisslock clasp that measures 4 inches (10cm) from end to end
+   
+    The main fabric colour is a lovely vibrant turquoise, and the super chic Eiffel Tower design is a rich chocolate brown. The interior of the purse is fully lined with polyester. It has also been interfaced and interlined to give it lots of volume as well as making it nice and sturdy. 
+
+
+    It is secured by an antique brass effect kisslock clasp that measures 4in (10cm) from end to end
   image1: eiffelbackground.jpg
   image2: eiffelbackground.jpg
   image3: butterflypurse002.jpg
@@ -28,16 +24,13 @@
   product_range_id: 3
   thumbnail: pinkeiffelpursethumb.jpg
   description: 
-   
-    This gorgeous coin purse has been handmade from wonderful quality quilting weight cotton.
-    
-    The main fabric colour is a beautiful pale pink, and the super chic Eiffel Tower design is a rich chocolate brown. 
+    This gorgeous coin purse has been handmade from wonderful quality quilting weight cotton. The main fabric colour is a beautiful pale pink, and the super chic Eiffel Tower design is a rich chocolate brown. 
+
 
     The purse has also been interfaced and interlined to give it lots of volume as well as making it nice and sturdy.
+
     
-    It is secured by an antique brass effect kisslock clasp and is fully lined with polyester.
-    
-    The purse frame measures 4 inches (10cm) from end to end
+    It is secured by an antique brass effect kisslock clasp and is fully lined with polyester. The purse frame measures 4in (10cm) from end to end
 
   image1: pinkeiffelpurse.jpg
   image2: pinkeiffelpurse2.jpg
@@ -52,11 +45,12 @@
   thumbnail: butterflypursethumb001.jpg
   description: 
     Here is a beautiful handmade butterfly patterned coin purse, fully lined with polyester. 
+
    
     Secured by an antique brass effect kisslock clasp it is the perfect size for keeping your money and cards safe for you to spend on more pretty things!
+
     
-    The purse frame measures 4 inches (10cm) from end to end.
-  
+    The purse frame measures 4in (10cm) from end to end.
   image1: butterflypurse001.jpg
   image2: butterflypurse002.jpg
   image3: butterflypurse002.jpg
@@ -72,13 +66,15 @@
   description: 
     Ooh la la!
 
+
     This beautiful bag has been handmade from fabulous turquoise quilting weight cotton, decorated with a rich chocolate brown Eiffel Tower design.
 
-    The interior of the bag is fully lined with polyester and has been interlined to make it nice and sturdy. 
-    
-    It has two pockets, one with a magnetic snap closure and the other with a secure elastic top.
 
-    The top of the bag secures with an antique brass kisslock clasp which measures 8 1/4 inches (20.5cm) wide by 3/12 inches (9cm) high.
+    The interior of the bag is fully lined with polyester and has been interlined to make it nice and sturdy. It has two pockets, one with a magnetic snap closure and the other with a secure elastic top.
+
+
+    The top of the bag secures with an antique brass kisslock clasp which measures 8&frac14;in (20.5cm) wide by 3&frac12;in (9cm) high.
+
     
     The bag has a 3 ft (1m) long shoulder strap that has been securely attached to brass swivel clips by a pair of brass coloured rivets.
   
@@ -97,16 +93,17 @@
   description:  
     This beautiful handmade handbag is perfect for carrying your belongings in style.
 
+
     The handbag exterior is made from a gorgeous raspberry tweed and it is attached to an antique brass effect kisslock frame. 
     
-    It is fully lined and has two interior pockets, one with a magnetic snap closure and one with a secure elastic top.
-    
-    These pockets are the perfect size for keeping your phone or other small items safe and secure.
+
+    It is fully lined and has two interior pockets, one with a magnetic snap closure and one with a secure elastic top. These pockets are the perfect size for keeping your phone or other small items safe and secure.
+
     
     It also has a 3' (1m) strap made from the same tweed, which is secured to the bag using brass effect swivel clips and brass rivets.
+
     
-    The bag measures 12 inches (30cm) at the widest point and 10 inches (25cm) at the highest.
-    
+    The bag measures 12in (30cm) at the widest point and 10in (25cm) at the highest.
 
   image1: 2tweedhandbag770x550.jpg
   image2: tweedhandbag770x550.jpg
@@ -123,19 +120,17 @@
   description: 
     Carry your belongings in amazing style!
 
-    This lovely handbag has been handmade from beautiful cotton with a multicoloured butterfly design.
-    
-    It is fully lined and has two interior pockets, one with a magnetic snap closure and one with a secure elastic top.
-    
-    It has also been interfaced and interlined to give a a good strong structure. 
-    
-    It has an antique brass effect kisslock clasp and a 39 inch (100cm) long shoulder strap which is secured using brass effect rivets. 
 
-    The handbag clasp measures 8 1/4in (W) x 3 1/2in (H) 
+    This lovely handbag has been handmade from beautiful cotton with a multicoloured butterfly design.
+
     
-    (20.5cm x 9cm). 
+    It is fully lined and has two interior pockets, one with a magnetic snap closure and one with a secure elastic top. It has also been interfaced and interlined to give a a good strong structure. 
+
     
-    The bag measures 10 1/2 inches by 12 /12 inches (26.5cm by 32cm) at the tallest and the widest points.
+    It has an antique brass effect kisslock clasp and a 39in (100cm) long shoulder strap which is secured using brass effect rivets. The handbag clasp measures 8&frac14;in (W) x 3&frac12;in (H) (20.5cm x 9cm). 
+
+    
+    The bag measures 10&frac12;in by 12&frac12;in (26.5cm by 32cm) at the tallest and the widest points.
   
   image1: 2butterflybag.jpg
   image2: 4butterflybag.jpg
@@ -152,13 +147,14 @@
   thumbnail: 2eiffelcushionthumb.jpg
   description: 
     Ooh la la!
+
     
-    This beautiful handmade 18’’ (45cm) square scatter cushion is filled with with 100% duck feather. 
+    This beautiful handmade 18in (45cm) square scatter cushion is filled with with 100% duck feather. 
+
     
-    The front panel is made from wonderful quality quilting weight cotton with a super sophisticated Eiffel Tower design in turquoise and brown. 
+    The front panel is made from wonderful quality quilting weight cotton with a super sophisticated Eiffel Tower design in turquoise and brown. The back panel of the cushion cover is made from lovely, soft caramel brushed cotton canvas. 
     
-    The back panel of the cushion cover is made from lovely, soft caramel brushed cotton canvas. 
-    
+
     The cushion is topped off with dark chocolate piping around the edge and a zip closure at the top.
   
   image1: 2eiffelcushion.jpg
@@ -175,15 +171,15 @@
   product_range_id: 1
   thumbnail: pinkeiffel001thumb.jpg
   description: 
-    
     Add a bit of Parisian chic to your room with this beautiful handmade 18’’ (45cm) square scatter cushion.
 
-    The front panel is made from wonderful quilting weight cotton, which has a super Eiffel Tower design in pale pink and brown. 
-    
-    The back panel of the cushion cover is made from lovely, soft caramel coloured, brushed cotton canvas.
+
+    The front panel is made from wonderful quilting weight cotton, which has a super Eiffel Tower design in pale pink and brown. The back panel of the cushion cover is made from lovely, soft caramel coloured, brushed cotton canvas.
+
 
     The cushion is finished with dark chocolate piping around the edge and has a zip closure at the top. 
     
+
     Inside the cover is a cushion filled with with 100% duck feather.
  
   image1: pinkeiffel001.jpg
@@ -194,25 +190,22 @@
   thumbnail_detail:
 
 
-
 - id: 9
   name: Butterfly Cushion
   collection_id: 3
   product_range_id: 1
   thumbnail: butterflycushionthumb.jpg
   description: 
-    
     Scatter Cushion with Butterfly Design.
     
-    Here is a little ray of summery sunshine for your room all year round! 
-   
-    This beautiful handmade 18’’ (45cm) square scatter cushion. 
+
+    Here is a little ray of summery sunshine for your room all year round! This beautiful handmade 18in (45cm) square scatter cushion. 
     
+
+    The front panel is made from wonderful quality quilting weight cotton with a multicoloured butterfly design and has a hot pink piping around the edge. The back panel is made from lovely, soft caramel brushed cotton canvas.
+
+
     The cushion inner itself is filled with 100% duck feather and the cushion cover has a zip closure.
-   
-    The front panel is made from wonderful quality quilting weight cotton with a multicoloured butterfly design and has a hot pink piping around the edge. 
-   
-    The back panel is made from lovely, soft caramel brushed cotton canvas.
   
   image1: butterflycushion.jpg
   image2: 5butterflycushion.jpg
@@ -222,23 +215,19 @@
   thumbnail_detail:
 
 
-
-  
-
 - id: 13
   name: Beach Huts Tote Bag
   collection_id: 4
   product_range_id: 2
   thumbnail: beachhuttotethumb.jpg
-  description: Beach Hut Tote Bag
-
+  description:
     Perfect for a picnic or your shopping, this laminated cotton tote bag has enough space for all your essentials. 
 
-    Decorated with cheery beach huts, the bag measures 30cm tall by 25cm wide. 
 
-    There are two sturdy webbing straps that are 25cm long making it easy  to carry over your shoulder. 
+    Decorated with cheery beach huts, the bag measures 12in (30cm) tall by 10in (25cm) wide. 
 
-    Inside there is a pocket perfectly positioned to keep your most precious belongings to hand and secure.
+
+    There are two sturdy webbing straps that are 10in (25cm) long making it easy to carry over your shoulder. Inside there is a pocket perfectly positioned to keep your most precious belongings to hand and secure.
 
   image1: beachhuttote.jpg
   image2: beachhuttote2.jpg
