Start adding prices.

--- a/data/products.yml
+++ b/data/products.yml
@@ -17,6 +17,7 @@
   esty_url: http://www.etsy.com/listing/82900126/turquoise-eiffel-tower-coin-purse
   carousel_label: Eiffel Tower Purse
   carousel_detail: Details
+  price: 20
 
 - id: 2
   name: Pink Eiffel Tower Purse
