--- a/data/products.yml
+++ b/data/products.yml
@@ -15,9 +15,9 @@
   image2: eiffelbackground.jpg
   image3: butterflypurse002.jpg
   etsy_url: http://www.etsy.com/listing/82900126/turquoise-eiffel-tower-coin-purse
-  carousel_detail1: Details
-  carousel_detail2: Details
-  carousel_detail3: Details
+  carousel_detail1: Fabulous Eiffel Tower design coin purse 
+  carousel_detail2: The perfect size for your cash & cards
+  carousel_detail3: Our butterfly coin purse and our Eiffel Tower purse
   price: 15
 
 - id: 2
@@ -38,7 +38,9 @@
   image2: pinkeiffelpurse2.jpg
   image3: pinkeiffelpurse3.jpg
   etsy_url: http://www.etsy.com/listing/83316708/pale-pink-eiffel-tower-coin-purse
-  carousel_detail:
+  carousel_detail1: Fabulous pink Eiffel Tower design coin purse
+  carousel_detail2: The perfect size for your cash & cards
+  carousel_detail3: Fabulous pink Eiffel Tower design coin purse
   price: 15
 
 - id: 3
@@ -58,9 +60,9 @@
   image2: butterflypurse002.jpg
   image3: butterflypurse002.jpg
   etsy_url: http://www.etsy.com/listing/79003320/multicoloured-butterfly-coin-purse
-  carousel_detail1:
-  carousel_detail2:
-  carousel_detail3:
+  carousel_detail1: Amazing butterfly design
+  carousel_detail2: The perfect size for your cash & cards
+  carousel_detail3: Amazing butterfly design
   price: 15
 
 - id: 4
@@ -87,9 +89,9 @@
   image2: eiffelbag7.jpg
   image3: 4butterflybag.jpg
   etsy_url: http://www.etsy.com/listing/83063904/turquoise-eiffel-tower-handbag
-  carousel_detail1:
-  carousel_detail2:
-  carousel_detail3:
+  carousel_detail1: Our super chic Eiffel Tower handbag
+  carousel_detail2: Perfect for carrying all your belongings
+  carousel_detail3: Our butterfly handbag alongside our Eiffel Tower bag
   price: 30
 
 - id: 5
@@ -116,9 +118,9 @@
   image2: tweedhandbag770x550.jpg
   image3: tweedhandbag770x550.jpg
   etsy_url: http://www.etsy.com/listing/80801278/raspberry-tweed-handbag
-  carousel_detail1:
-  carousel_detail2:
-  carousel_detail3:
+  carousel_detail1: Our wonderful raspberry tweed handbag
+  carousel_detail2: Carry your belongings in style!
+  carousel_detail3: Lovely kisslock clasp
   price: 45
 
 - id: 6
@@ -145,10 +147,10 @@
   image2: 4butterflybag.jpg
   image3: 5butterflybag.jpg
   etsy_url: http://www.etsy.com/listing/79105421/butterfly-shoulder-bag-with-kisslock
-  carousel_detail1:
-  carousel_detail2:
-  carousel_detail3:
-  price: 30
+  carousel_detail1: Our beautiful butterfly handbag
+  carousel_detail2: Made with amazing multicoloured butterfy fabric
+  carousel_detail3: Add a touch of Summer to your wardrobe
+  price: 25
 
 - id: 7
   name: Eiffel Tower Cushion
@@ -162,7 +164,7 @@
     This beautiful handmade 18in (45cm) square scatter cushion is filled with with 100% duck feather. 
 
     
-    The front panel is made from wonderful quality quilting weight cotton with a super sophisticated Eiffel Tower design in turquoise and brown. The back panel of the cushion cover is made from lovely, soft caramel brushed cotton canvas. 
+    The front panel is made from wonderful quality quilting weight cotton with a super Eiffel Tower design in turquoise and brown. The back panel of the cushion cover is made from lovely, soft caramel brushed cotton canvas. 
     
 
     The cushion is topped off with dark chocolate piping around the edge and a zip closure at the top.
@@ -171,10 +173,11 @@
   image2: 3eiffelcushion.jpg
   image3: triplecushionstackbackroung.jpg
   etsy_url: http://www.etsy.com/listing/77582821/turquoise-eiffel-tower-scatter-cushion
-  carousel_label: Eiffel Tower Cushion
-  carousel_detail: Beautiful handmade 18in (45cm) square scatter cushion
+  carousel_detail1: Beautiful handmade 18in (45cm) square scatter cushion
+  carousel_detail2: Fabulous Eiffel Tower design in turquiose
+  carousel_detail3: Add a touch of Parisian chic to your room
   price: 25
-  
+
   
 - id: 8
   name: Pink Eiffel Tower Cushion
@@ -197,9 +200,9 @@
   image2: pinkeiffel5.jpg
   image3: pinkeiffel6.jpg
   etsy_url: https://www.etsy.com/listing/83487711/pale-pink-eiffel-tower-cushion
-  carousel_detail1:
-  carousel_detail2:
-  carousel_detail3:
+  carousel_detail1: Beautiful handmade 18in (45cm) square scatter cushion
+  carousel_detail2: Fabulous Eiffel Tower design in pink
+  carousel_detail3: Add a touch of Parisian chic to your room
   price: 25
 
 
@@ -212,7 +215,7 @@
     Scatter Cushion with Butterfly Design.
     
 
-    Here is a little ray of summery sunshine for your room all year round! This beautiful handmade 18in (45cm) square scatter cushion. 
+    This beautiful handmade 18in (45cm) square scatter cushion is the perfect Summery addition to any room.
     
 
     The front panel is made from wonderful quality quilting weight cotton with a multicoloured butterfly design and has a hot pink piping around the edge. The back panel is made from lovely, soft caramel brushed cotton canvas.
@@ -224,9 +227,9 @@
   image2: 5butterflycushion.jpg
   image3: triplecushionstackbackroung.jpg
   etsy_url: http://www.etsy.com/listing/77581509/scatter-cushion-with-multicoloured
-  carousel_detail1:
-  carousel_detail2:
-  carousel_detail3:
+  carousel_detail1: Beautiful handmade 18in (45cm) square scatter cushion
+  carousel_detail2: Bring Summer into your home 
+  carousel_detail3: A selection of our scatter cushions
   price: 25
 
 
@@ -247,8 +250,9 @@
   image1: beachhuttote.jpg
   image2: beachhuttote2.jpg
   image3: beachhuttote2.jpg
-  carousel_detail1:
-  carousel_detail2:
-  carousel_detail3:
+  etsy_url: https://www.etsy.com/listing/101262824/beach-hut-shopping-bag
+  carousel_detail1: Perfect for pinics
+  carousel_detail2: Just the right size for your shopping
+  carousel_detail3: Cheery beach huts design
   price: 12
   
