--- a/data/products.yml
+++ b/data/products.yml
@@ -3,6 +3,7 @@
   collection_id: 1
   product_range_id: 3
   thumbnail: eiffelbackgroundthumb.jpg
+  short_description: Eiffel Tower design coin purse
   description: 
     Here is a fabulous purse for you to keep your belongings safe in real style! This gorgeous coin purse has been handmade from wonderful quality quilting weight cotton. 
 
