Fix image with gap showing.

--- a/data/products.yml
+++ b/data/products.yml
@@ -171,7 +171,7 @@
   
   image1: 2eiffelcushion.jpg
   image2: 3eiffelcushion.jpg
-  image3: triplecushionstackbackroung.jpg
+  image3: triplestack1.jpg
   etsy_url: http://www.etsy.com/listing/77582821/turquoise-eiffel-tower-scatter-cushion
   carousel_detail1: Beautiful handmade 18in (45cm) square scatter cushion
   carousel_detail2: Fabulous Eiffel Tower design in turquiose
@@ -228,7 +228,7 @@
   
   image1: butterflycushion.jpg
   image2: 5butterflycushion.jpg
-  image3: triplecushionstackbackroung.jpg
+  image3: triplestack1.jpg
   etsy_url: http://www.etsy.com/listing/77581509/scatter-cushion-with-multicoloured
   carousel_detail1: Beautiful handmade 18in (45cm) square scatter cushion
   carousel_detail2: Bring Summer into your home 
