Finish off new front page and backgrounds.

--- a/data/products.yml
+++ b/data/products.yml
@@ -265,7 +265,7 @@
   name: Butterfly iPad Case
   collection_id: 3
   product_range_id: 4
-  thumbnail: ipadcase2thumb.jpg
+  thumbnail: buttipad1thumb.jpg
   description:
     Protect your iPad from dust and scratches with this beautiful handmade iPad case.
 
@@ -286,7 +286,7 @@
     
     It will fit an original iPad, an iPad 2 or a New iPad with or without smartcovers.  
   
-  image1: ipadcase1.jpg
+  image1: buttipad1.jpg
   image2: ipadcase2.jpg
   image3: ipadcase3.jpg
   etsy_url: https://www.etsy.com/listing/101812574/butterfly-ipad-case
